Spacing issues

--- a/app/styles/_onboarding.scss
+++ b/app/styles/_onboarding.scss
@@ -40,7 +40,12 @@ h3 {
 }
 
 .onboarding-title, .onboarding-body {
-  padding-left: 25px
+  padding-left: 25px;
+  margin-top: 10px;
+}
+
+h3 {
+  margin-bottom: 0rem; 
 }
 
 .onboarding-close {
@@ -87,7 +92,7 @@ a.onboarding-link {
 
 .music-note-container {
   padding-right: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
   svg {
     width: 200%; 
     height: 100%;
@@ -108,6 +113,10 @@ a.onboarding-link {
   width: 100%;
 }
 
+.onboarding-link-container {
+  top: 10px;
+}
+
 //MOBILE and IPAD 
 
 @include mq($medium-only) {
@@ -119,6 +128,7 @@ a.onboarding-link {
 
   .onboarding-message-text-container {
     text-align: center;
+    margin-bottom: 20px;
   }
 
   .text-and-note {
@@ -150,10 +160,11 @@ a.onboarding-link {
   .onboarding-title, .onboarding-body { 
     padding-left: 0px;
     margin-bottom: 1rem;
+    margin-top: 0px;
   }
 
   .onboarding-link-container {
-    margin: auto 0;
+    margin: auto 0; 
   }
 
   .onboarding-button {
